feat(S3)add files to s3

--- a/src/app/components/hall/hall.component.html
+++ b/src/app/components/hall/hall.component.html
@@ -1,4 +1,5 @@
 <div class="main-content">
-    <h1 class="mt-4">Contenido Principal</h1>
-    <p>Aquí puedes agregar el contenido principal de tu página.</p>
+    <h1 class="mt-4">Bienvenidos a la cienaga</h1>
+    <p>Si quereis sobrevivir buscar los codigos sapiles </p> 
+    <p>Rapido dirigiros al pueblo SC: TOWN</p>
 </div>
