--- a/src/app/components/insert-column/insert-column.component.html
+++ b/src/app/components/insert-column/insert-column.component.html
@@ -1,11 +1,11 @@
-<div class=" menu-sidebar-content js-scrollbar1" >
+<div class=" menu-sidebar-content js-scrollbar1 navbar-green   fixed-div" >
     
-        <h3 class="mb-4 blink">🎃 Columna Embrujada 🎃</h3>
+        <h2 class="mb-4 blink text-center">🎃 Scape code 🎃</h2>
         <div class="mb-3">
             <form (ngSubmit)="onSubmit()">
-                <label for="inputTexto"  class="form-label">Inser the scape code</label>
+                <label for="inputTexto"  class="form-label ">Inser the scape code</label>
                 <input type="text" name="secretInput" class="form-control" [(ngModel)]="scapeCode"  >
-                <button type="submit" class="btn btn-halloween">Conjurar</button>
+                <button type="submit" class="btn btn-halloween col-12 mt-2">Conjurar</button>
             </form>
         </div>
         
