--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="page-wrapper">
-    <nav class="navbar navbar-expand-lg navbar-green">
+    <!-- <nav class="navbar navbar-expand-lg navbar-green">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Mi Sitio Embrujado</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -19,13 +19,13 @@
                 </ul>
             </div>
         </div>
-    </nav>
-    <div class="row">
-        <div class="col-md-3">
+    </nav> -->
+    <div class="row  vh-100">
+        <div class="col-md-5  vh-100">
             <app-insert-column ></app-insert-column>
     
         </div>
-        <div class="page-container col-md-9">
+        <div class="page-container col-md-5 ">
             <router-outlet  ></router-outlet>
         </div>
     </div>
