--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,29 +1,37 @@
-<div class="halloween-container main-content">
-  <div class="section-content p-3">
-    <h1>{{ room?.name?.toLocaleUpperCase() }}</h1>
-    <div *ngFor="let tempRiddle of room?.riddleList">
-        
-        <div *ngIf="tempRiddle.imageUrl!=undefined">
-            <img [src]="tempRiddle.imageUrl" alt="Imagen de Halloween" class="halloween-image">
+<div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
+  <div class="row w-100">
+    <div class=" mx-auto seccion">
+      <div class="halloween-container main-content text-center " >
+        <div class="section-content p-3">
+          <h1 class="mb-4">{{ room?.name?.toLocaleUpperCase() }}</h1>
+          <div *ngFor="let tempRiddle of room?.riddleList" class="mb-4 ">
+            
+            <div *ngIf="tempRiddle.imageUrl!=undefined" class="mb-3">
+              <img src="{{tempRiddle.imageUrl}}" alt="Imagen de Halloween" class="halloween-image img-fluid">
+            </div>
+            <div *ngIf="tempRiddle.hintText!=undefined" class="mb-3">
+              <p>{{tempRiddle.hintText}}</p>
+            </div>
+            <div *ngFor="let tempLink of tempRiddle.linkList" class="mb-2">
+              <a [href]="tempLink" target="_blank" class="btn  btn-halloween">{{ tempLink }}</a>
+            </div>
+            
+            <div *ngIf="tempRiddle.answerText!=null" class="mb-3">
+              <form (ngSubmit)="checkSecretWord(tempRiddle)" class="form-inline justify-content-center">
+                <div class="form-group container-fluid col-md-6 mb-2">
+                  <input type="text" class="form-control " [(ngModel)]="tempRiddle.userInput" name="secretInput" placeholder="Escribe la palabra mágica...">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2 btn-halloween">Revelar secreto </button>
+              </form>
+            </div>
+          
+            <p *ngIf="tempRiddle.done" class="secret-text">
+              ¡{{tempRiddle.rewardText}}! 🎃👻
+            </p>
+          </div>
+          
         </div>
-        <div *ngIf="tempRiddle.hintText!=undefined">
-            <p>{{tempRiddle.hintText}}</p>
-        </div>
-        <div *ngFor="let tempLink of tempRiddle.linkList">
-            <a [href]="tempLink" target="_blank">{{ tempLink }}</a>
-        </div>
-        
-    <div *ngIf="tempRiddle.answerText!=null"><form (ngSubmit)="checkSecretWord(tempRiddle)">
-        <input type="text" [(ngModel)]="tempRiddle.userInput" name="secretInput" placeholder="Escribe la palabra mágica...">
-        <button type="submit">Revelar secreto</button>
-      </form></div>
-    
-    
-    <p *ngIf="tempRiddle.done" class="secret-text">
-      ¡Has descubierto el secreto de Halloween! 🎃👻
-    </p>
+      </div>
     </div>
-    
   </div>
-   
-  </div>
+</div>
