--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
 /* Estilos generales */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #2c2c2c; /* Fondo oscuro */
     color: #ffffff; /* Texto blanco */
     font-family: 'Creepster', cursive; /* Fuente temática (puedes cargarla desde Google Fonts) */
+    display: flex;
+    flex-direction: column;
+}
+
+/* Contenedor principal */
+.container-fluid {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Fila principal */
+.row {
+    flex: 1;
+    display: flex;
+}
+
+/* Columna */
+.menu-sidebar-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto; /* Permite desplazamiento si el contenido es muy largo */
 }
 
 /* Títulos */
 h1, h2, h3 {
-    color: #ff7518; /* Naranja brillante */
+    color: #4caf4fb7; /* Naranja brillante */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra para dar profundidad */
 }
 
@@ -25,7 +54,7 @@ a:hover {
 
 /* Botones */
 .btn-halloween {
-    background-color: #ff7518; /* Naranja brillante */
+    background-color: #4caf4fb7; /* Naranja brillante */
     border: none;
     color: white;
     padding: 10px 20px;
@@ -34,8 +63,38 @@ a:hover {
     transition: background-color 0.3s ease;
 }
 
+.fixed-div {
+    background-color: #4a4a4a;
+    border-radius: 10px; 
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+    height: 100vh;
+    
+    
+    overflow-y: auto; /* Permite scroll dentro del div si el contenido es muy largo */
+  }
+  @media screen and (max-width: 767px) {
+    .fixed-div {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 35vh; /* 20% de la altura de la ventana */
+      overflow-y: auto; /* Permite scroll vertical si el contenido es más alto */
+      /* Color de fondo para distinguirlo */
+      z-index: 1000; /* Asegura que esté por encima de otros elementos */
+      padding:1rem; /* Añade algo de padding para el contenido */
+      box-sizing: border-box; /* Incluye padding en la altura total */
+    }
+    
+}
 .btn-halloween:hover {
-    background-color: #ff4500; /* Rojo anaranjado al pasar el mouse */
+    background-color: #e76813; /* Rojo anaranjado al pasar el mouse */
 }
 
 /* Efecto de parpadeo para elementos especiales */
@@ -51,15 +110,13 @@ a:hover {
 
 /* Estilo para una sección de Halloween */
 .halloween-section {
-    /* Imagen de fondo temática */
     background-size: cover;
     padding: 50px;
     border-radius: 15px;
 }
-  /* Estilo para la barra de navegación verdosa */
-  .navbar-green {
-    background-color: #4CAF50; /* Verde oscuro */
-}
+
+/* Estilo para la barra de navegación verdosa */
+
 
 .navbar-green .navbar-brand,
 .navbar-green .nav-link {
@@ -70,21 +127,23 @@ a:hover {
     color: #ff7518; /* Color naranja al pasar el mouse */
 }
 
-/* Sombra para la barra de navegación */
-.navbar-green {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
 .secret-text {
     margin-top: 20px;
     font-size: 1.2em;
-    color: #4CAF50;
+    color: #4caf4fb7;
     animation: blink 1s infinite;
-  }
+}
 
-  .halloween-image {
+.halloween-image {
     max-width: 100%;
     height: auto;
     margin: 20px 0;
     border-radius: 5px;
-  }
+}
+
+@media screen and (min-width: 767px) {
+  
+    .halloween-container{
+        max-height: 90vh;
+        }
+}
